# ralph-orchestrator

./: .gitignore  AGENTS.md  Cargo.toml  EVENT_LOOP.md  ISSUES.md  PROMPT.md  README.md  index.html  package-lock.json  pyproject.toml  ralph.bot.yml  ralph.claude.yml  ralph.code-assist.yml  ralph.e2e.yml  ralph.kiro.yml  ralph.yml
.claude/skills/code-task-generator/: SKILL.md
.github/workflows/: ci.yml  release.yml
backend/ralph-web-server/: package.json
changelog/: index.html
crates/ralph-adapters/: Cargo.toml
crates/ralph-adapters/examples/: pty_handle_demo.rs
crates/ralph-adapters/src/: claude_stream.rs  cli_backend.rs  cli_executor.rs  lib.rs  pty_executor.rs  pty_handle.rs  stream_handler.rs
crates/ralph-bench/src/: main.rs
crates/ralph-cli/: Cargo.toml
crates/ralph-cli/src/: bot.rs  doctor.rs  (+6 more)
crates/ralph-core/: Cargo.toml
crates/ralph-mcp/: Cargo.toml
docs/: changelog.md
docs/guide/: agents.md  configuration.md
docs/migration/: v2-hatless-ralph.md
frontend/ralph-web/: package.json
guide/kiro-migration/: index.html
presets/: deploy.yml  docs.yml  feature-minimal.yml  feature.yml  refactor.yml
search/: search_index.json
specs/: behavioral-verification.spec.md  behaviors.yaml  benchmark-harness.spec.md  benchmark-tasks.spec.md  benchmark-ux.spec.md  event-loop.spec.md  hat-collections.spec.md  homebrew-tap.spec.md  pty-mode.spec.md
specs/archive/: event-loop.spec.md.bak
specs/event-loop/: idea-honing.md
src/ralph_orchestrator/: __init__.py  __main__.py
tasks/: fix-ctrl-c-freeze.code-task.md  fix-iteration-rendering.code-task.md
(+51 files in other folders)
