[project]
name = "ralph-orchestrator"
version = "1.4.0"
description = "DEPRECATED - Please install the Rust version: brew install mikeyobrien/homebrew-tap/ralph"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Mikey O'Brien", email = "m@mobrienv.dev"}
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# No dependencies - tombstone package
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[project.urls]
Homepage = "https://mikeyobrien.github.io/ralph-orchestrator/"
Repository = "https://github.com/mikeyobrien/ralph-orchestrator"
Documentation = "https://mikeyobrien.github.io/ralph-orchestrator/"
Issues = "https://github.com/mikeyobrien/ralph-orchestrator/issues"

[project.scripts]
ralph = "ralph_orchestrator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph_orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
